# ConanTest

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  myclass.cpp  myclass.h
